Add feature login and register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,10 +18,6 @@
     <string name="button_add_to_cart">Tambahkan ke Keranjang - %s</string>
     <string name="sum">1</string>
     <string name="location">Lokasi</string>
-    <string name="number_edit_text">Your Number</string>
-    <string name="email_edit_text">Your Email</string>
-    <string name="username_edit_text">Your Username</string>
-    <string name="name_edit_text">Your Name</string>
     <string name="text_hint_notes">Notes</string>
     <string name="notes_cart">Catatan :</string>
     <string name="text_header_your_cart">Keranjang</string>
@@ -42,4 +38,23 @@
     <string name="title_custom_dialog">Order Success!</string>
     <string name="desc_custom_dialog">Your order has been placed successfully.</string>
     <string name="text_no_data">No data</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="text_register">Register</string>
+    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
+    <string name="text_log_in">Log in</string>
+    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
+    <string name="text_error_email_empty">Email should not be empty</string>
+    <string name="text_error_email_invalid">Enter a valid format email</string>
+    <string name="text_error_password_empty">Password should not be empty</string>
+    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
+    <string name="text_password_does_not_match">Password doesn\'t match</string>
+    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
+    <string name="text_highlight_login_here">Login Here</string>
+    <string name="text_highlight_register">Register Here</string>
+    <string name="text_logout">Logout</string>
+    <string name="text_loading">Loading</string>
+    <string name="error_checkout">Error checkout</string>
 </resources>
